south ave culvert update

--- a/child_pages/cc-elections/Candidates/austino.html
+++ b/child_pages/cc-elections/Candidates/austino.html
@@ -213,13 +213,14 @@
             <div class="policy-positions can-sec">
                 As of 9/29/2024, Inform the Vote has scoured the internet and attempted to contact the former Sheriff multiple times. There doesn't seem to be any available information in 
                 regards to his specific policy positions, other than he is against what he claims is the county over-spending on county park projects... however, we cross-checked 
-                this with Commissioner Romero who says the parks are within budget and there is no need for concern.
+                this with his opponent, Commissioner Romero, who says the parks are within budget and there is no need for concern.
                 <br>
                     <br>
                     Capizola and Austino also brought up an issue regarding South Ave in Bridgeton while on the campaign trail:
                 <a href="https://www.facebook.com/robert.austino/posts/pfbid03YKWKWQh56kDkR4ynGHHEi3MZM7o5yfynSW7eEznw5YWpBWxroCrTT4WygJPnzehl?rdid=v5nQp6dOcKrGTaQK">Source</a>,
                 however it seems as though the issue is in the process of being handled: 
-                <a href="https://www.facebook.com/joe.sileo.5/posts/pfbid02B1SrVJRoPtcEKrntgp6J5zWo4xdPZC3eYDLHnCZVFANvTHjJTjY3eLc3dWGMQrasl?rdid=UC1J4QcJI0Hthza5">Source</a>
+                <a href="https://www.facebook.com/joe.sileo.5/posts/pfbid02B1SrVJRoPtcEKrntgp6J5zWo4xdPZC3eYDLHnCZVFANvTHjJTjY3eLc3dWGMQrasl?rdid=UC1J4QcJI0Hthza5">Source</a>,
+                <a href="https://cumberlandcountynj.gov/press-releases/?FeedID=8553&fbclid=IwY2xjawF_oE9leHRuA2FlbQIxMAABHWmML36E50OFvJDbFxaDr-dmK1TrZFrCpw10t1eb-y8YmkL0M-CycTeegw_aem_Bxr9sxoiH2wgxNCqr4Rk3A">County Press Release</a>.
 
             </div>
 
