--- a/child_pages/cc-elections/Candidates/romero.html
+++ b/child_pages/cc-elections/Candidates/romero.html
@@ -101,7 +101,12 @@
                 clarify his individual stances and how he differentiates himself from his opponents, with no response. He was also asked in person about whether he received the email, to which
                 he said he would look for it. At Deerfield Day, we asked his challenger Austino what his platform was, to which he expressed concerns about the commissioner board 
                 potentially spending too much money on county parks, and when we cross-checked this with Romero, Romero said (paraphrased) "Those projects are within the county budget, 
-                there's nothing to be concerned about." You might also get some more updates by following the 
+                there's nothing to be concerned about." There was also an implicative claim on the campaign trail from his opponents that the South Ave Culvert project has not been 
+                efficiently handled, but you can see that the county is in the process of handling it here,
+                <a href="https://cumberlandcountynj.gov/press-releases/?FeedID=8553&fbclid=IwY2xjawF_oE9leHRuA2FlbQIxMAABHWmML36E50OFvJDbFxaDr-dmK1TrZFrCpw10t1eb-y8YmkL0M-CycTeegw_aem_Bxr9sxoiH2wgxNCqr4Rk3A">County Press Release</a>.
+                This could be part of Romero's running mates', Director Commissioner Sileo, often proposed claim that the historically Democrat controlled county has created a onion
+                with many layers of problems, so projects such as the South Ave Culvert could be taking much longer than would normally be needed.
+                You might also get some more updates by following the 
                 <a href="https://www.facebook.com/CumberlandNJGOP">Cumberland County GOP facebook group</a> for the remainder of the campaign season.
                 Click the x at the top red of this box to go back to the page.
               </p>
