--- a/child_pages/cc-elections/Candidates/sileo.html
+++ b/child_pages/cc-elections/Candidates/sileo.html
@@ -95,7 +95,7 @@
               <h6 class="page-title">Joe Sileo</h6>
               <p>
                 Commissioner Director Sileo is up for re-election this year. Being that he is an incumbent and one of his challengers Capizola has less than one year of experience as a 
-                commissioner, he has more experience than his democrat challengers. Like his ticket-mate Commissioner Romero, Sileo has a long career in business, specifically within the steel 
+                commissioner, he has more direct experience than his democrat challengers. Like his ticket-mate Commissioner Romero, Sileo has a long career in business, specifically within the steel 
                 industry. He has pointed out at a recent Republican breakfast that his business experience is important because many decisions of the Commissioner board are more 
                 business-related decisions as opposed to political decisions. He has also been involved in several community leadership positions throughout the years. This was also 
                 highlighted at the breakfast meeting as he pointed out that being Director Commissioner, he is now the leader and spokesperson of the board. Like most candidates at the local
@@ -106,6 +106,10 @@
                 clarify his individual stances and how he differentiates 
                 himself from his opponents, with no response. However, he also did point out at the breakfast meeting that with the current 7-0 Republican board, productivity has been much more 
                 efficient since there are now significantly less political roadblocks, with the commissioner board being all on the same page. 
+                There was also an implicative claim on the campaign trail from his opponents that the South Ave Culvert project has not been 
+                efficiently handled, but you can see that the county is in the process of handling it here,
+                <a href="https://cumberlandcountynj.gov/press-releases/?FeedID=8553&fbclid=IwY2xjawF_oE9leHRuA2FlbQIxMAABHWmML36E50OFvJDbFxaDr-dmK1TrZFrCpw10t1eb-y8YmkL0M-CycTeegw_aem_Bxr9sxoiH2wgxNCqr4Rk3A">County Press Release</a>.
+                This could be part the aforementioned 'layered onion'claim, so this project could be taking much longer than would normally be needed.
                 You might also get some more updates by following the 
                 <a href="https://www.facebook.com/CumberlandNJGOP">Cumberland County GOP facebook group</a> for the remainder of the campaign season.
                 Click the x at the top red of this box to go back to the page.
