--- a/child_pages/cc-elections/cc_county_commissioners_2024.html
+++ b/child_pages/cc-elections/cc_county_commissioners_2024.html
@@ -101,21 +101,22 @@
             Both parties appear to be running 'slate', which means they are running as a team within their parties, potentially all the way up to the national level (in fact, the 
             democrat candidates have officially endorsed the Harris-Walz ticket on their facebook). All candidates have been reached out to in terms of clarifying their individual 
             characteristics, agendas, policy positions, and comparisons to other candidates. While some candidates have posted some information and spoken to us at various events, only 
-            former Sheriff Austino has directly responded to those detailed requests with a brief explanation regarding the current board potentially spending too much money on 
-            County Park projects, to which current Commissioner Romero responded that the projects are within budget and there is no need for concern.
+            former Sheriff Austino has directly responded to those detailed requests. He gave a brief explanation regarding the current board potentially spending too much money on 
+            County Park projects, to which one of his opponents, current Commissioner Romero, responded that the projects are within budget and there is no need for concern.
             <br>
             <br>
             The two republican incumbents for County Commissioner inherently have experience, generally promote conservative values and policy, and have addressed local issues from a 
-            conservative perspective, such as voting no for the Middle Mile Broadband project for fiscally conservative reasons and bringing up concerns on how national immigration policy is 
-            affecting our county (apparently MS-13 gang members have been identified here in Cumberland County - Commissioner Sileo stated at a recent Republican breakfast meeting). 
-            It is also common messaging from the local Republicans that the Democrats have been predominantly in charge for the past 40 odd years and have made a mess in the process,
-            with some recent articles suggesting some of our cities are the worst in the state, so maybe it is time for the County to give Republicans a chance for a while to clean 
-            up the mess. With that in mind, it is the opinion of InformTheVote that the Democrat challengers ought to present more information on why a change in the current 
-            Republican dominated leadership might be beneficial.
+            conservative perspective. For example, they voted no for the Middle Mile Broadband project for fiscally conservative reasons and they have brought up concerns on how 
+            national immigration policy is affecting our county (apparently MS-13 gang members have been identified here in Cumberland County - Commissioner Sileo stated at a recent 
+            Republican breakfast meeting). 
+            It is also common messaging from the local Republicans that the Democrats have been predominantly in charge for the past 40 odd years and have made a mess during that time,
+            In that vein, some recent articles suggest some of our cities are the worst in the state, so maybe it is time for the County to give Republicans a chance peel back the 
+            layers of a messy onion currently present in county government, and once the mess is identified, it will take time to clean up. With that in mind, it is the opinion of 
+            InformTheVote that the Democrat challengers ought to present more information on why a change in the current Republican dominated leadership might be beneficial.
             With such little information regarding how local candidates might handle local issues, it remains difficult to know what the actual choices are, and it 
-            could be fair to say that the incumbents are doing a good job... if it ain't broke, don't fix it. On the other hand, since no differentiations have been made regarding the candidates
-            from their parties, with some candidates openly <a href="https://www.facebook.com/teamrileyaustinocapizola/posts/pfbid02TfP87cUqFVnRcghD2B2azdWREc7QMw6twNeWtgZYQ1obVZwmXvrB2McQgDrfFEHxl?rdid=kpuRhdj1uAT0qrfm">endorsing their national ticket</a>,
-            if you more generally agree with Democrat or Republican party platforms, voting party-line is also understandable. Be sure to check out the  
+            could be fair to say that the incumbents are doing a good job... if it ain't broke, don't fix it. On the other hand, since no clear, public differentiations have been made 
+            regarding the candidates from their challengers or their own parties, with some candidates openly <a href="https://www.facebook.com/teamrileyaustinocapizola/posts/pfbid02TfP87cUqFVnRcghD2B2azdWREc7QMw6twNeWtgZYQ1obVZwmXvrB2McQgDrfFEHxl?rdid=kpuRhdj1uAT0qrfm">endorsing their national ticket</a>,
+            if you more generally agree with Democrat or Republican party platforms, voting party-line is understandable. Be sure to check out the  
             <a href="https://prod-cdn-static.gop.com/media/documents/DRAFT_12_FINAL%5B1%5D-ben_1468872234.pdf">Republican Party Platform</a> and 
             <a href="https://www.donaldjtrump.com/platform">Agenda 47</a> (Donald Trump's agenda) to see the general direction of Republicans. Also be sure to check out the
             <a href="https://democrats.org/where-we-stand/party-platform/">Democrat Party Platform</a> and the Harris-Walz ticket 
