--- a/child_pages/get-involved.html
+++ b/child_pages/get-involved.html
@@ -210,14 +210,23 @@
                                     <br>
                                 </li>
                                 <li class="gi-ul-li">
-                                    <strong>County Commissioner Meetings:</strong> These meetings are a great way to understand how 
+                                    <strong>County Commissioner Meetings and Press Releases:</strong> These meetings are a great way to understand how 
                                     local government functions and what issues are currently at the forefront. Each meeting has a 
                                     'public comments' section, allowing you to actively participate. Prepare your questions and bring 
                                     a notebook to jot down important points. They are usually held at the administration building at 164 West Broad Street in Bridgeton,
                                     at 6pm, but sometimes they move around. We post some of these on our events calendar, but be sure to double check the
                                     <a href="https://cumberland.iqm2.com/citizens/Default.aspx?AgencyName=Cumberland">Cumberland County Government Site</a> as things 
                                     are always subject to change.
+                                    <br>
+                                    <br>
+                                    There was also a <a href="https://cumberlandcountynj.gov/press-releases/?FeedID=8553&fbclid=IwY2xjawF_oE9leHRuA2FlbQIxMAABHWmML36E50OFvJDbFxaDr-dmK1TrZFrCpw10t1eb-y8YmkL0M-CycTeegw_aem_Bxr9sxoiH2wgxNCqr4Rk3A">County Press Release</a>
+                                    that directly related to claims made on the campaign trail during the 2024 election. We have also asked for quarterly reports from the county 
+                                    so we can stay informed about what is going on. Hopefully moving forward there will be more consistent use of press releases and quarterly reports 
+                                    so that the electorate gets direct, verified information from the government... as opposed to relying on social media, which sometimes functions 
+                                    like more of a rumor mill.
                                 </li>
+                                <br>
+                                <br>
                                 <li class="gi-ul-li">
                                     <strong>Casual County Events:</strong> Events like Deerfield Day give you a chance to interact with candidates, even if the main focus 
                                     isn't on the upcoming election. However, these events are often poorly advertised by political candidates, which we hope to change. 
