--- a/child_pages/cc-elections/Candidates/capizola.html
+++ b/child_pages/cc-elections/Candidates/capizola.html
@@ -218,7 +218,8 @@
                 Capizola and Austino also brought up an issue regarding South Ave in Bridgeton while on the campaign trail:
                 <a href="https://www.facebook.com/robert.austino/posts/pfbid03YKWKWQh56kDkR4ynGHHEi3MZM7o5yfynSW7eEznw5YWpBWxroCrTT4WygJPnzehl?rdid=v5nQp6dOcKrGTaQK">Source</a>,
                 however it seems as though the issue is in the process of being handled: 
-                <a href="https://www.facebook.com/joe.sileo.5/posts/pfbid02B1SrVJRoPtcEKrntgp6J5zWo4xdPZC3eYDLHnCZVFANvTHjJTjY3eLc3dWGMQrasl?rdid=UC1J4QcJI0Hthza5">Source</a>
+                <a href="https://www.facebook.com/joe.sileo.5/posts/pfbid02B1SrVJRoPtcEKrntgp6J5zWo4xdPZC3eYDLHnCZVFANvTHjJTjY3eLc3dWGMQrasl?rdid=UC1J4QcJI0Hthza5">Source</a>,
+                <a href="https://cumberlandcountynj.gov/press-releases/?FeedID=8553&fbclid=IwY2xjawF_oE9leHRuA2FlbQIxMAABHWmML36E50OFvJDbFxaDr-dmK1TrZFrCpw10t1eb-y8YmkL0M-CycTeegw_aem_Bxr9sxoiH2wgxNCqr4Rk3A">County Press Release</a>.
             </div>
 
             <br>
