edit on vsb quick summary

--- a/child_pages/cc-elections/vsb_2024.html
+++ b/child_pages/cc-elections/vsb_2024.html
@@ -96,7 +96,7 @@
         <div class="modal-content">
           <img src="../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
           <h4 class="quick-sum">quick summary button</h4>
-          <h6 class="page-title">County Commissioner</h6>
+          <h6 class="page-title">Vineland School Board</h6>
           <p>This year 3 seats are open on the Vineland School Board. Eugene Medio is a Republican candidate running for re-election. He has many years of experience on the school board, spoke out in 
             dissent against policy 5756 (Parents rights vs Trans rights related), believes that the current disciplinary system needs to be overhauled, and that we should get a new 
             superintendent. Makema Douglas is running again this year, with most of her facebook looking like general school related posts. However, she does have a cool 
