vsb quick summary update

--- a/child_pages/cc-elections/vsb_2024.html
+++ b/child_pages/cc-elections/vsb_2024.html
@@ -101,10 +101,14 @@
             dissent against policy 5756 (Parents rights vs Trans rights related), believes that the current disciplinary system needs to be overhauled, and that we should get a new 
             superintendent. Makema Douglas is running again this year, with most of her facebook looking like general school related posts. However, she does have a cool 
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSeYEvSEepLwdmAfnxymvRYYjUZNKkTF3H_MuwanbJwSvebMdw/viewform?fbclid=IwY2xjawE8mRlleHRuA2FlbQIxMAABHdMnYARk1103JuS0TRKzRA-qkmTyzlSkybmV8xoVb_tu_9goWHAzufOekA_aem_nc-Cy3vcoj_MBDoq9uadHw">google survey</a> 
-            related to the upcoming election, and we have some of her election related info from last year, so be sure to check those out. The rest of the candidates seem to have very little 
-            or no information available. Also, Candidate Perez got into contact with us and provided that she has many years of experience in the financial field 
+            related to the upcoming election, and we have some of her election related info from last year, so be sure to check those out. Shane Harris is a retired police officer 
+            with many years of policing experience directly related to the school system. His main focus seems to be to provide a strong, informed perspective on dealing with 
+            school safety and security. Also, Candidate Perez got into contact with us and provided that she has many years of experience in the financial field 
             and sitting on various boards, so she will be able to bring her financial expertise to the board. She also prioritizes parental notification, helping students 
-            achieve higher test scores, and school safety. She hopes that her guidance will help teachers to focus on teaching and students to focus on learning.
+            achieve higher test scores, and school safety. 
+            She hopes that her guidance will help teachers to focus on teaching and students to focus on learning.
+            Alix Silva is a current school board member, but we haven't been able to make contact with him, and his facebook campaign page only provides a generic campaign message, 
+            're-elect Silva'.
             Click the red x at the top of this box and then scroll down down for more in-depth information.
           </p>
         </div>
