--- a/child_pages/cc-elections/Candidates/harris_shane.html
+++ b/child_pages/cc-elections/Candidates/harris_shane.html
@@ -142,15 +142,15 @@
              </div>
 
              <div class="animal-box">
-                <img src="../../../assets/candidates/" alt="unknown" class="donkey">
-                <img src="../../../assets/candidates/" alt="unknown" class="donkey">
-                <img src="../../../assets/candidates/" alt="unknown" class="donkey">
-                <img src="../../../assets/candidates/" alt="unknown" class="donkey">
-                <img src="../../../assets/candidates/" alt="unknown" class="donkey">
-                <img src="../../../assets/candidates/" alt="unknown" class="donkey">
-                <img src="../../../assets/candidates/" alt="unknown" class="donkey">
-                <img src="../../../assets/candidates/" alt="unknown" class="donkey">
-                <img src="../../../assets/candidates/" alt="unknown" class="donkey">
+                <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
              </div>
          </div>
      </div>
