--- a/child_pages/cc-elections/Candidates/harris_shane.html
+++ b/child_pages/cc-elections/Candidates/harris_shane.html
@@ -9,6 +9,10 @@
         <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Roboto+Mono&display=swap" rel="stylesheet">
         <script src="../../../app.js" async></script>
         <title>Inform The Vote</title>
+        <meta property="og:title" content="Inform The Vote NJ - Shane Harris">
+        <meta property="og:description" content="Election information about Shane Harris">
+        <meta property="og:image" content="https://i.postimg.cc/hGHsKm2M/informthevotepreviewimg.png">
+        <meta property="og:url" content="http://www.informthevotenj.com/child_pages/cc-elections/candidates/harris_shane">
     </head>
     <body>
         <div class="menu-wrap">
