instructions added to head section of index.html

--- a/index.html
+++ b/index.html
@@ -15,10 +15,23 @@
         <link href="https://fonts.googleapis.com/css2?family=Anton+SC&display=swap" rel="stylesheet">
         <link rel="preload" href="assets/blue_court.jpg" as="image" type="image/jpg" />
         <script src="homepage_scripts.js" async></script>
+        <!-- Begin preview image meta tags -->
         <meta property="og:title" content="Inform The Vote NJ">
         <meta property="og:description" content="Election information for NJ residents">
         <meta property="og:image" content="https://i.postimg.cc/hGHsKm2M/informthevotepreviewimg.png">
         <meta property="og:url" content="http://informthevotenj.com">
+        <!-- End preview image meta tags -->
+
+        <!-- Instructions -->
+         <!-- First copy above 4 lines of code.
+              Paste on any and all pages lacking it in the header
+              Edit content sections appropriately EXCEPT for the image tag
+              Open a new tab and go to -> https://developers.facebook.com/tools/debug/
+              Enter the URL into here
+              Click 'Debug'
+              Under Time Scraped field, click 'Scrape Again'
+              Rinse, repeat
+               -->
     </head>
 <body>    
 
