another ascii cleanup on woody page

--- a/child_pages/cc-elections/Candidates/woody.html
+++ b/child_pages/cc-elections/Candidates/woody.html
@@ -185,7 +185,7 @@
                 <br>
                 In 2004, my grandfather's passing marked a significant transition in my life as I inherited the family home. It's here that I raised my two wonderful children, now 
                 aged 11 and 16. As a parent, I feel a responsibility to ensure they experience the same sense of community pride that I have. I want my children to feel the same 
-                connection to Cedarville that I have felt, to be able to say, "You know you’re from Cedarville when..." with a sense of belonging and pride.
+                connection to Cedarville that I have felt, to be able to say, "You know you're from Cedarville when..." with a sense of belonging and pride.
                 <br>
                 <br>
                 Today, I stand committed to enhancing the spirit of Cedarville and bringing back the essence of our small-town roots while looking forward to the new possibilities 
