woody page cleanup

--- a/child_pages/cc-elections/Candidates/woody.html
+++ b/child_pages/cc-elections/Candidates/woody.html
@@ -159,12 +159,12 @@
                     <li><b>Transparency</b>
                     <br>
                     <br>
-                    While I may be younger than my opponent, I have not lost sight of our town’s rich history or the challenges we currently face. It is essential to prioritize transparency 
+                    While I may be younger than my opponent, I have not lost sight of our town's rich history or the challenges we currently face. It is essential to prioritize transparency 
                     with our taxpayers. We must be diligent in tracking the allocation of funds and shining a light on our expenditures.
                     <br>
                     <br>
                     It is disheartening to witness the current committee's lack of transparency. Many residents are struggling to make ends meet, and some are at risk of losing their homes. 
-                    The response of the current administration—“You should have shown up to a meeting”—is dismissive and fails to acknowledge the diverse work schedules of our community 
+                    The response of the current administration-"You should have shown up to a meetin"-is dismissive and fails to acknowledge the diverse work schedules of our community 
                     members. To foster an inclusive environment, I propose that our meetings be live-streamed, allowing those who cannot attend in person to participate meaningfully. 
                     Furthermore, I believe in the importance of creating a channel for residents to submit their questions via email so they can be addressed during meetings at their 
                     convenience. 
@@ -173,16 +173,20 @@
                     Our township website requires updated maintenance and user-friendly access. I commit to being available for any inquiries from my fellow neighbors, ensuring no one 
                     feels intimidated, as evidenced by inappropriate conduct displayed at the September 11, 2023, meeting. 
                     </li>
+                    <br>
+                    <br>
                     <li><b>553</b>
                     <br>
                     <br>
-                    The condition of 553 must be addressed; it poses significant safety risks to our residents. Rather than assigning blame for ownership, let’s collaborate with the county 
+                    The condition of 553 must be addressed; it poses significant safety risks to our residents. Rather than assigning blame for ownership, let's collaborate with the county 
                     to develop actionable plans that will restore our infrastructure and preserve the beauty of our beloved lake. 
                     </li>
+                    <br>
+                    <br>
                     <li><b>Safe and Engaging Spaces for Children</b>
                     <br>
                     <br>
-                    Our children deserve safe and engaging spaces—alternatives to merely wandering the streets. I intend to partner with local organizations to create recreational 
+                    Our children deserve safe and engaging spaces-alternatives to merely wandering the streets. I intend to partner with local organizations to create recreational 
                     facilities that will enrich our community without imposing additional burdens on taxpayers. 
                     </li>
 
@@ -236,9 +240,9 @@
                 future for all residents.Together, let's ensure our children can proudly say, "I'm from Cedarville.""
             </div>
 
-            <h4 class="sub-heading">Experience/h4>
+            <h4 class="sub-heading">Experience</h4>
                 <div class="experience can-sec">
-                    As a lifelong resident of this remarkable town, my dedication has been shaped by years of active service, from volunteering at my family’s food pantry to answering 
+                    As a lifelong resident of this remarkable town, my dedication has been shaped by years of active service, from volunteering at my family's food pantry to answering 
                     emergency 911 calls for our community over the past 17 years. In recognition of my commitment, I was honored in 2017 with a lifetime membership for my contributions to 
                     our town—a testament to my enduring connection to our neighbors and their needs. 
                 </div>
