one more cleanup on woody page

--- a/child_pages/cc-elections/Candidates/woody.html
+++ b/child_pages/cc-elections/Candidates/woody.html
@@ -244,7 +244,7 @@
                 <div class="experience can-sec">
                     As a lifelong resident of this remarkable town, my dedication has been shaped by years of active service, from volunteering at my family's food pantry to answering 
                     emergency 911 calls for our community over the past 17 years. In recognition of my commitment, I was honored in 2017 with a lifetime membership for my contributions to 
-                    our town—a testament to my enduring connection to our neighbors and their needs. 
+                    our town-a testament to my enduring connection to our neighbors and their needs. 
                 </div>
    
     </div>
