senate and house of reps debates posted, quick summaries updated

--- a/child_pages/cc-elections/house_of_representatives_2024.html
+++ b/child_pages/cc-elections/house_of_representatives_2024.html
@@ -103,16 +103,25 @@
             Salerno basically said (paraphrased): "I don't have a very specific agenda or policy positions. I was more inspired to run to help government become more unified and less divisive.
             Van Drew also seems to lack a moral compass." While those seem like potentially valid perspectives, Van Drew has a lot more experience than Salerno, so it is the opinion of 
             InformTheVote that a much more nuanced platform would be necessary to persuade informed voters, as it's one thing to present a general direction, it's another to have a specific 
-            plan of action and the experience to know how to execute it. Additionally, Green Party candidate Cannavo does have an agenda listed on his site, but there isn't much nuance to 
-            the agenda items, nor is there an explanation on how he would implement them. With relatively new or unknown candidates like Salerno and Cannavo, we hope that more in-depth 
-            information will come in throughout campaign season.
+            plan of action and the experience to know how to execute it. This point was further emphasized at the debate between Van Drew and Salerno (posted below), where there was a repeated 
+            strategy of attacking Van Drew and Trump without consistently making clear what his own action plan would be. That being said, you should watch the debate and decide for yourself. 
+            Additionally, Green Party candidate Cannavo does have an agenda listed on his site, but there isn't much nuance to 
+            the agenda items, nor is there an explanation on how he would implement them. With the campaign season coming to an end and many clarification questions still on the table for 
+            relative unknowns like Salerno and Cannavo, we feel Van Drew will be tough to beat.
             <br>
             <br>
             However, if you generally lean Republican or Democrat, you can brush up on their platforms at the
             <a href="https://prod-cdn-static.gop.com/media/documents/DRAFT_12_FINAL%5B1%5D-ben_1468872234.pdf">Republican Party Platform</a>, 
             <a href="https://www.donaldjtrump.com/platform">Agenda 47</a> (Donald Trump's agenda), the
-            <a href="https://democrats.org/where-we-stand/party-platform/">Democrat Party Platform</a>, and wait for the Harris-Walz ticket 
-            to post their specific platform (still not posted as of 8/9/2024 <a href="https://kamalaharris.com/">Campaign Site</a>).
+            <a href="https://democrats.org/where-we-stand/party-platform/">Democrat Party Platform</a>, and the Harris-Walz ticket 
+            <a href="https://kamalaharris.com/">Campaign Site</a>.
+
+            <div class="video-box-modal can-sec">
+                <h3 class="video-heading">Van Drew vs Salerno Debate</h3>
+        
+                <iframe src="https://www.youtube.com/embed/QX-nhNQRWbQ?si=yxnubhaTZ8CkHcqK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>           
+            </div>   
+
             Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
           </p>
         </div>
