--- a/child_pages/cc-elections/Candidates/woody.html
+++ b/child_pages/cc-elections/Candidates/woody.html
@@ -106,6 +106,13 @@
                 chance to make it to meetings, and raising the online presence of local government through updating its website and leveraging social media. He wants to make sure the local roads 
                 remain safe, specifically by trying to make progress on the worsening condition of County Road 553, which has been deteriorating for decades. Finally, he also wants to make sure 
                 that local residents feel safe to engage in local politics, as he has had some unpleasant experiences while getting involved.
+
+                <div class="video-box-modal can-sec">
+                    <h3 class="video-heading">Van Drew vs Salerno Debate</h3>
+            
+                    <iframe src="https://www.youtube.com/embed/m2c0H2agSyc?si=y5JXmnrnrvlmAl81" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                
+                </div>   
+
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
 
               </p>
