woody and lawrence updates/corrections

--- a/child_pages/cc-elections/Candidates/woody.html
+++ b/child_pages/cc-elections/Candidates/woody.html
@@ -108,7 +108,7 @@
                 that local residents feel safe to engage in local politics, as he has had some unpleasant experiences while getting involved.
 
                 <div class="video-box-modal can-sec">
-                    <h3 class="video-heading">Van Drew vs Salerno Debate</h3>
+                    <h3 class="video-heading">InformTheVoteNJ Interview With Charlie Woody</h3>
             
                     <iframe src="https://www.youtube.com/embed/m2c0H2agSyc?si=y5JXmnrnrvlmAl81" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                
                 </div>   
