--- a/child_pages/cc-elections/lawrence_township_committee_2024.html
+++ b/child_pages/cc-elections/lawrence_township_committee_2024.html
@@ -98,9 +98,12 @@
           <p>
             A seat on the Lawrence Township committee is up for election this year, with incumbent Mayor Miletta and challenger Charlie Woody in the race. 
             Miletta has been doing the job for 17 years and through our conversation with him on the phone, he seems to be very dedicated and hands on, 
-            even so far as to spend personal time and donating resources like steel to help the township repair equipment. On the other hand, we haven't been 
-            able to find any information about Woody, but Miletta seems to think he is making some traction on social media, but without a comparable resume to 
-            that of Miletta.
+            even so far as to spend personal time and donating resources like steel to help the township repair equipment. On the other hand, Woody is a lifelong 
+            resident of Cedarville who believes it might be time to pass the torch along to the next generation. He wants to bring transparency to the committee 
+            through means of updating the township website, live-streaming and posting committee meetings, and allowing residents to submit questions to the 
+            committee via the website when their schedules don't allow them to attend meetings. He also wants to see progress on the long-standing issue of 
+            repairing County Road 553 and develop engaging spaces for children, such as using the senior center during after school hours for kids activities and 
+            trying to build a skate park in the township.
             Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
 
           </p>
