--- a/child_pages/cc-elections/Candidates/woody.html
+++ b/child_pages/cc-elections/Candidates/woody.html
@@ -103,9 +103,34 @@
                 through the years. In that direct vein, he wants to invest in creating engaging spaces for children, including using the local senior center for kids activities during after
                 school hours and looking into the successful plans of neighboring districts building skate parks. Furthermore, he wants a to provide a stronger sense of transparency in local 
                 government by doing things such as live-streaming and posting recordings of committee meetings, having residents post questions for the committee online when they don't have a 
-                chance to make it to meetings, and raising the online presence of local government through updating its website and leveraging social media. He wants to make sure the local roads 
-                remain safe, specifically by trying to make progress on the worsening condition of County Road 553, which has been deteriorating for decades. Finally, he also wants to make sure 
-                that local residents feel safe to engage in local politics, as he has had some unpleasant experiences while getting involved.
+                chance to make it to meetings, and raising the online presence of local government through updating its website and leveraging social media. A few examples regarding needing to 
+                update the township website are an
+                <br>
+                <br>
+                <details>
+                    <summary style="cursor:pointer; color:blue; text-decoration:underline;">Incorrect Mayor Position Listing</summary>
+                        <img src="../../../assets/screenshots/mayorMixup.png" alt="Screenshot Thumbnail" id="screenshotThumbnail" style="cursor:pointer; width:100%; max-width: 80vw; margin-top: 10px;">
+                        As shown in the image, you can see the listing of Lawrence Township elected positions found in the Cumberland County Directory of 2024, that Elmer "Skip" Bowman 
+                        is the mayor and Joseph Miletta is a committeeman... while on the right you can see on the Lawrence Township website that Joseph Miletta is listed as mayor and 
+                        Elmer Skip Bowman is listed as Deputy Mayor. It is our understanding that Bowman became mayor at the beginning of 2024. While some might see this as a small 
+                        oversight regarding website maintenance, modernizing and digitizing local government has been a common priority, as mentioned in last year's surrogate race and 
+                        this year's County Clerk's race. It is 2024 after all, and this is just one example that Woody points out... and he sometimes gets asked by residents who even is 
+                        the mayor, because they are unsure.
+                    </details>
+                    , and a
+                <br>
+                <br>
+                <details>
+                    <summary style="cursor:pointer; color:blue; text-decoration:underline;">Lack of Posted Minutes</summary>
+                        <img src="../../../assets/screenshots/lawrenceMinutes.png" alt="Screenshot Thumbnail" id="screenshotThumbnail" style="cursor:pointer; width:100%; max-width: 80vw; margin-top: 10px;">
+                        As shown in the image, you can see the a bunch of empty white boxes with our question marks over top of them. And if you look at the dates of the posted minutes,
+                        it seems as though minutes weren't posted from about September 11th, 2023 until April 4-8 2024, and none afterwards. To be fair, apparently you can request minutes 
+                        that have not been posted, but that might not be obvious to users, as it is visually inconsistent. In other words, in 2024, Woody feels this is another example of 
+                        modern digitalization expectations not being met. And we here at InformTheVoteNJ generally agree, while the county has been making progress at digitalization, 
+                        there is still much work to be done, and regular website maintenance is key to providing the public easily accessible information.
+                    </details>
+                    . Watch the interview below and read Woody's full candidate page for more in-depth information.
+                
 
                 <div class="video-box-modal can-sec">
                     <h3 class="video-heading">InformTheVoteNJ Interview With Charlie Woody</h3>
