--- a/child_pages/cc-elections/lawrence_township_committee_2024.html
+++ b/child_pages/cc-elections/lawrence_township_committee_2024.html
@@ -96,7 +96,7 @@
           <h4 class="quick-sum">quick summary</h4>
           <h6 class="page-title">Lawrence Township Committee</h6>
           <p>
-            A seat on the Lawrence Township committee is up for election this year, with incumbent Mayor Miletta and challenger Charlie Woody in the race. 
+            A seat on the Lawrence Township committee is up for election this year, with incumbent committee-man Miletta and challenger Charlie Woody in the race. 
             Miletta has been doing the job for 17 years and through our conversation with him on the phone, he seems to be very dedicated and hands on, 
             even so far as to spend personal time and donating resources like steel to help the township repair equipment. On the other hand, Woody is a lifelong 
             resident of Cedarville who believes it might be time to pass the torch along to the next generation. He wants to bring transparency to the committee 
