--- a/child_pages/cc-elections/Candidates/woody.html
+++ b/child_pages/cc-elections/Candidates/woody.html
@@ -101,7 +101,7 @@
                 Candidate Woody is a lifelong resident of Cedarville who wants to restore a sense of pride throughout his community. While growing up, he believes there was a strong sense of 
                 community where everyone knew each other, the township residents could leave there doors unlocked, and there were things to do. He feels as though that standard has slipped 
                 through the years. In that direct vein, he wants to invest in creating engaging spaces for children, including using the local senior center for kids activities during after
-                school hours and looking into the successful plans of neighboring districts building skate parks. Furthermore, he wants a to provide a stronger sense of transparency in local 
+                school hours and looking into the successful plans of neighboring districts building skate parks. Furthermore, he wants to provide a stronger sense of transparency in local 
                 government by doing things such as live-streaming and posting recordings of committee meetings, having residents post questions for the committee online when they don't have a 
                 chance to make it to meetings, and raising the online presence of local government through updating its website and leveraging social media. A few examples regarding needing to 
                 update the township website are an
