--- a/index.html
+++ b/index.html
@@ -250,9 +250,9 @@
         
         <div class="video-box-sm">
             <h3 class="video-heading-sm"></h3>
-                <iframe src="https://www.youtube.com/embed/H3bTIfkFfx4?si=vPXkSJIKsjQ5S-k8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/m2c0H2agSyc?si=y5JXmnrnrvlmAl81" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                
             <div class="video-sm-desc">  
-                Vice-Mayor of Millville Joe Sooy discusses the issues related to the commissioner's election
+                Interview with Charlie Woody, Candidate for Lawrence Township Committee
             </div>
         </div>
 
