--- a/child_pages/cc-elections/lawrence_township_committee_2024.html
+++ b/child_pages/cc-elections/lawrence_township_committee_2024.html
@@ -12,6 +12,10 @@
 <link href="https://fonts.googleapis.com/css2?family=REM:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,600;1,700&family=Roboto+Mono&display=swap" rel="stylesheet">
 <script src="../../../app.js" async></script>    
 <title>Inform The Vote</title>
+<meta property="og:title" content="Inform The Vote NJ - Shane Harris">
+        <meta property="og:description" content="Election information about Shane Harris">
+        <meta property="og:image" content="https://i.postimg.cc/hGHsKm2M/informthevotepreviewimg.png">
+        <meta property="og:url" content="http://www.informthevotenj.com/child_pages/cc-elections/lawrence_township_committee_2024.html">
 </head>
 <body>
     <div class="menu-wrap">
