more meta tags fix

--- a/child_pages/cc-elections/Candidates/miletta.html
+++ b/child_pages/cc-elections/Candidates/miletta.html
@@ -9,8 +9,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Roboto+Mono&display=swap" rel="stylesheet">
         <script src="../../../app.js" async></script>
         <title>Inform The Vote</title>
-        <meta property="og:title" content="Inform The Vote NJ - Shane Harris">
-        <meta property="og:description" content="Election information about Shane Harris">
+        <meta property="og:title" content="Inform The Vote NJ - Joe Miletta">
+        <meta property="og:description" content="Election information about Joe Miletta">
         <meta property="og:image" content="https://i.postimg.cc/hGHsKm2M/informthevotepreviewimg.png">
         <meta property="og:url" content="http://www.informthevotenj.com/child_pages/cc-elections/candidates/miletta">
     </head>
