another meta tag fix

--- a/child_pages/cc-elections/lawrence_township_committee_2024.html
+++ b/child_pages/cc-elections/lawrence_township_committee_2024.html
@@ -15,7 +15,7 @@
 <meta property="og:title" content="Inform The Vote NJ - Lawrence Township Committee Election">
         <meta property="og:description" content="Election information about Lawrence Township">
         <meta property="og:image" content="https://i.postimg.cc/hGHsKm2M/informthevotepreviewimg.png">
-        <meta property="og:url" content="http://www.informthevotenj.com/child_pages/cc-elections/lawrence_township_committee_2024.html">
+        <meta property="og:url" content="http://www.informthevotenj.com/child_pages/cc-elections/lawrence_township_committee_2024">
 </head>
 <body>
     <div class="menu-wrap">
