--- a/child_pages/cc-elections/Candidates/cossaboon.html
+++ b/child_pages/cc-elections/Candidates/cossaboon.html
@@ -116,7 +116,7 @@
              <div class="position">Millville City Commissioner</div>
          </div>
          <div class="incum-or-challenger">
-             <div class="incumbent active">Incumbent</div>
+             <div class="incumbent inactive">Incumbent</div>
              <div class="challenger active">Challenger</div> 
          </div>
      </div>
