--- a/child_pages/cc-elections/Candidates/salerno.html
+++ b/child_pages/cc-elections/Candidates/salerno.html
@@ -126,7 +126,7 @@
              <div class="position">US House of Representatives</div>
          </div>
          <div class="incum-or-challenger">
-             <div class="incumbent active">Incumbent</div>
+             <div class="incumbent inactive">Incumbent</div>
              <div class="challenger active">Challenger</div> 
          </div>
      </div>
